// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: fluid and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #010205;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
img {
  display: block;
  filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem);
}"
`;

exports[`getComponentCss() should return correct css for size: fluid and theme: light 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #010205;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
img {
  display: block;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem);
}"
`;

exports[`getComponentCss() should return correct css for size: inherit and theme: dark 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #010205;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
img {
  display: block;
  filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit and theme: light 1`] = `
":host {
  display: block;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  display: block;
  text-decoration: none;
  outline: 0;
}
a::-moz-focus-inner {
  border: 0;
}
a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 0px;
}
a:focus::before {
  outline-color: #010205;
}
a:focus:not(:focus-visible)::before {
  outline-color: transparent;
}
img {
  display: block;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  height: inherit;
}"
`;
